NOCC 1.3    ?? ??, 200?

    * Bug #1565973 : More mixed EOL in some files (Arnaud Boudou).
    * Patch #1565779 : Use <th> for mail headers too (Tim Gerundt).
    * Patch #1565759 : Use "sendData" class for mail_body in "html/send.php" too
      (Tim Gerundt).
    * Patch #1565371 : Add simple "print" CSS (Tim Gerundt).
    * Patch #1565084 : Add missing IDs to html/prefs.php (Tim Gerundt).
    * Patch #1564552 : Use <th> for table header cells (Tim Gerundt).
    * Bug #1565100 : Mixed EOL in html/send.php (Arnaud Boudou).
    * Bug #1565082 : Logout.php use empty theme (Arnaud Boudou).
    * Patch #1563453 : Use <label> for send.php (Tim Gerundt).
    * Bug #1555543 : Some small spelling errors in en.php (Arnaud Boudou).
    * Bug #1552568 : Setting wrap None is not shown as selected (Arnaud Boudou).
    * Bug #1551529 : $html_to occurs twice in language files (Arnaud Boudou).
    * Bug #1550843 : Move and Copy buttons of top row in Inbox don't work
      (Arnaud Boudou).
    * Bug #1550133 : Some pages do not validate as XHTML 1.1 (Arnaud Boudou).
    * Bug #1549545 : Extra slash introduced by Back link on error page (Arnaud
      Boudou).
    * Bug #1547166 : errorpage: wrong images URL's and misbehaving back button
      (Arnaud Boudou).
    * Improve RSS handling (Arnaud Boudou).
    * Bug #1524048 : Session Data Gets Mangled / NoccKey and NoccIdent (Arnaud
      Boudou).
    * Bug #1526431 : Java script error in IE on delete (Arnaud Boudou).
    * Patch #1537220 : LANG and THEME may change also pop users (Vadim).
    * Add mail controls (delete, select all, etc.) to the bottom of the INBOX
      page (Arnaud Boudou).
    * Bug #1524044 :  SMTP Auth Failures mishandled (Arnaud Boudou).
    * Improve remote pictures handling (Arnaud Boudou).
    * Bug #1518887 : errors when enable preferences (Arnaud Boudou).

NOCC 1.2    July 01, 2006

    * Add lang and theme choice to preferences section (Arnaud Boudou).