@@ -1,5 +1,7 @@
 NOCC 1.3    ?? ??, 200?
 
+    * Bug #1566972 : Needless if statement in "html_top_table.php"? (Arnaud
+      Boudou).
     * Bug #1565973 : More mixed EOL in some files (Arnaud Boudou).
     * Patch #1565779 : Use <th> for mail headers too (Tim Gerundt).
     * Patch #1565759 : Use "sendData" class for mail_body in "html/send.php" too
